--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <li><a href="#diseño">Diseño</a></li>
                         <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
                         <li><a href="#contacto">Contacto</a></li>
-                        <li><a href="docs/Hoja de Vida Karla Delgado (1).pdf" download>Descargar</a></li>
+                        <li><a href="docs/Hoja de Vida Karla Delgado.pdf" download="Hoja_de_Vida_Karla_Delgado.pdf">Descargar</a></li>
                     </ul>
                 </nav>
             </div>
@@ -203,5 +203,6 @@
     });
   </script>
 </body>
+
 
 </html>
