--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="header-content">
                 <h1>KarlaBlog</h1>
                 <img src="imagenes/foto.jpg" alt="foto" class="img-circular">
+                <button class="menu-toggle" aria-label="Abrir menú">☰</button>
                 <nav>
                     <ul>
                         <li><a href="#inicio">Inicio</a></li>
@@ -206,3 +207,4 @@
 
 
 </html>
+
